Add name to artist

--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -222,6 +222,10 @@
     <Compile Include="Migrations\201703091223350_AddForeignKeyPropertiesToGig.Designer.cs">
       <DependentUpon>201703091223350_AddForeignKeyPropertiesToGig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703141043288_AddNameToApplicationUser.cs" />
+    <Compile Include="Migrations\201703141043288_AddNameToApplicationUser.Designer.cs">
+      <DependentUpon>201703141043288_AddNameToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -319,6 +323,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703091223350_AddForeignKeyPropertiesToGig.resx">
       <DependentUpon>201703091223350_AddForeignKeyPropertiesToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703141043288_AddNameToApplicationUser.resx">
+      <DependentUpon>201703141043288_AddNameToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
